[package]
name = "jts-test-runner"
version = "0.1.0"
authors = ["Michael Kirk <michael.code@endoftheworl.de>"]
edition = "2021"

[dependencies]
approx = "0.4.0"
geo = "0.19.0"
glob = "0.3.0"
log = "0.4.14"
serde =  { version = "1.0.103", features = ["derive"] }
serde-xml-rs = "0.5.1"
wkt = { version = "0.10.0", features = ["geo-types", "serde"] }

[dev-dependencies]
pretty_env_logger = "0.4.0"
